--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<h2>NES Zelda Dungeon Recreation</h2>
 									<p>Controls: WASD for movement. X for Sword and Z for alternate weapons. Invincibility by pressing 1. Secret level by pressing 4</p>
 
-									<p>I, along with my partner, recreated the first dungeon in NES Legend of Zelda. We both worked on different enemies and parts of the game. I focused on the projectile enemies, such as Goriya and Aquamentus. I worked a lot on the map layout and triggers, to help navigate through the world. Last but not least, I focused heavily on the secret mechanic.</A></p>
+									<p>I, along with my partner, recreated the first dungeon in NES Legend of Zelda. We both worked on different enemies and parts of the game. I focused on the projectile enemies, such as Goriya and Aquamentus. I worked a lot on the map layout and triggers, to help navigate through the world. Last but not least, I focused heavily on the secret mechanic.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
