--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 									<p>I, along with my partner, recreated the first dungeon in NES Legend of Zelda. We both worked on different enemies and parts of the game. I focused on the projectile enemies, such as Goriya and Aquamentus. I worked a lot on the map layout and triggers, to help navigate through the world. Last but not least, I focused heavily on the secret mechanic.</p>
 									<ul class="actions">
-										<li><a href="ZeldaPortfolio.zip" download class="button">Download ZIP</a></li>
+										<li><a href="files/ZeldaPortfolio.zip" download class="button">Download ZIP</a></li>
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
