--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
 							</div>
 						</section>
 					</section>
+					<!-- Two -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<div class="content">
+								<div class="inner">
+									<h2>Triangulation - Horror Game</h2>
+									<p>Controls: WASD for movement. Mouse to look around. E to interact</p>
+
+									<p>Over the course of 2 weeks, I create a small horror game from scratch. I found various textures online</p>
+									<ul class="actions">
+										<li><a href="https://monachia.itch.io/triangulation" class="button" target="_blank">Play on Itch.io</a></li>
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>									
+								</div>
+							</div>
+						</section>
+					</section>
 			</div>
 
 		<!-- Footer -->
