--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						</section>
 					</section>
 					<!-- Two -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="two" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
