--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<h2>Triangulation - Horror Game</h2>
 									<p>Controls: WASD for movement. Mouse to look around. E to interact</p>
 
-									<p>Over the course of 2 weeks, I create a small horror game from scratch. The game is a survival game featuring no combat. You must make your way through the levels while escaping from the threats that surround you. With nothing but your handy flashlight.</p>
+									<p>Over the course of 2 weeks, I create a small horror game from scratch. The game is a survival game featuring no combat. You must make your way through the levels while escaping from the threats that surround you with nothing but your handy flashlight.</p>
 									<ul class="actions">
 										<li><a href="https://monachia.itch.io/triangulation" class="button" target="_blank">Play on Itch.io</a></li>
 										<li><a href="generic.html" class="button">Learn more</a></li>
