--- a/index.html
+++ b/index.html
@@ -40,8 +40,26 @@
 						</div>
 					</section>
 
-				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<div class="content">
+								<div class="inner">
+									<h2>Rainy Day Rush - Platformer</h2>
+									<p>Controls: A, D to move. W/Space to jump. Mouse for umbrella.</p>
+
+									<p>Run, jump, and glide your way through this 2d side scrolling platformer with nothing but your trusty umbrella as you try to make it to your interview. But be careful, you won't get that job easily; there are dangers lurking around every corner. Brave the weather and keep your suit clean to look your best for the interview. Hope you get the job!</p>
+									<p>I specifically focused on programming and level design. I implemented the projectile enemies, the umbrella rotations, and the moving platforms. For level design, I worked a lot on the start area of level 2 and also parts of level 3.</p>
+									<ul class="actions">
+										<li><a href="https://umbrellaheroes.itch.io/rainy-day-rush" class="button" target="_blank">Play on Itch.io</a></li>
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>									
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- One -->
+					<section id="two" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
@@ -65,7 +83,7 @@
 						</section>
 					</section>
 					<!-- Two -->
-					<section id="two" class="wrapper style2 spotlights">
+					<section id="three" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
