--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
 						<section>
 							<div class="content">
 								<div class="inner">
+									<h2>Personal Game Engine</h2>
+									<p>Over the course of 3 months, I worked on and built a 2d game engine that supports lua scripting. I personally worked on a custom skeletal animation system, which lets you break down an animation by key frames and control how each bone of an actor should move while an animation is playing.</p>
+									<p>Libraries/Technologies used: C++, Lua, SDL, GLM, Box2D, RapidJson, LuaBridge </p>
+									<ul class="actions">
+										<li><a href="https://youtu.be/gfKQhh3v8HA" class="button" target="_blank">Play on Itch.io</a></li>
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>									
+								</div>
+							</div>
+						</section>
+					</section>
+					<!-- Three -->
+					<section id="three" class="wrapper style2 spotlights">
+						<section>
+							<div class="content">
+								<div class="inner">
 									<h2>Triangulation - Horror Game</h2>
 									<p>Controls: WASD for movement. Mouse to look around. E to interact</p>
 
