--- a/index.html
+++ b/index.html
@@ -90,16 +90,21 @@
 									<h2>Personal Game Engine</h2>
 									<p>Over the course of 3 months, I worked on and built a 2d game engine that supports lua scripting. I personally worked on a custom skeletal animation system, which lets you break down an animation by key frames and control how each bone of an actor should move while an animation is playing.</p>
 									<p>Libraries/Technologies used: C++, Lua, SDL, GLM, Box2D, RapidJson, LuaBridge </p>
+									
+									<!-- Embedded YouTube Video -->
+									<div class="video-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/gfKQhh3v8HA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									
 									<ul class="actions">
-										<li><a href="https://youtu.be/gfKQhh3v8HA" class="button" target="_blank">Play on Itch.io</a></li>
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>									
+									</ul>                                  
 								</div>
 							</div>
 						</section>
 					</section>
 					<!-- Three -->
-					<section id="three" class="wrapper style2 spotlights">
+					<section id="four" class="wrapper style2 spotlights">
 						<section>
 							<div class="content">
 								<div class="inner">
